now jwt token auth is enabled
