# server/data/request/LoginRequest.go
@@ -1,6 +1,7 @@
 package request
 
 type LoginRequest struct {
-	Login    string `json:"login" binding:"required"`
-	Password string `json:"password" binding:"required"`
+	Login      string `json:"login" binding:"required"`
+	Password   string `json:"password" binding:"required"`
+	IsRemember bool   `json:"isRemember" binding:"required"`
 }
